# truenth-portal

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .isort.cfg  .pep8speaks.yml  .project  .travis.yml  146102.out  146152.out  3494-EMPRO-questionnaire_responses.txt  LICENSE  MANIFEST.in  Procfile  README.md  README.rst  VERSION  app.json  app.py  application.cfg.default  descriptor.json  gulpfile.js  manage.py  pan.index-list {  portal.conf  portal.wsgi  portal_tests.py  requirements.build.txt  requirements.dev.txt  requirements.prod.txt  requirements.txt  session_monitor.py  setup.cfg  setup.py  setuptools_scm-1.14.0-py2.7.egg  setuptools_scm-1.15.0-py2.7.egg  tox.ini  wsgi.py
.catalyze/: post-build
.github/: dependabot.yml
.github/workflows/: build-deliver.yaml  semgrep.yml  test.yaml
debian/: changelog  control  default  links  portal.triggers  post-build.sh  postinst  pre-build.sh  rules  shlibs.local
demo/: topnav.php
demo/css/: main.css  topnav.css
docker/: Dockerfile  Dockerfile.build  build  default.env  docker-compose.build.yaml  docker-compose.dev.yaml  docker-compose.flower.yaml  docker-compose.nice-celery.yaml  docker-compose.prod.yaml  docker-compose.static-ingress.yaml  docker-compose.traefik-ingress.yaml  docker-compose.yaml  portal.env.default  remap_envvars.py
docs/: Makefile
docs/source/: code.rst  conf.py  configuration.rst  configuration.txt  contributing.rst  contributing.txt  development.rst  development.txt  docker.rst  docker.txt  index.rst  index.txt  internationalization.rst  interventions.txt  organizations.rst  organizations.txt  portal.rst  portal.txt  portal_config.rst  portal_models.rst  portal_models.txt  portal_views.rst  portal_views.txt  provider_authentication.rst  readme_link.rst  readme_link.txt  sessions.txt  site_persistence.txt  testing.rst  user_experience.rst
instance/: application.cfg.default  babel.cfg  eproms.babel.cfg  gil.babel.cfg
migrations/versions/: 1df2ef1f5b73_.py  2439eea5b23c_.py  2bde002dd3a9_.py  30e217c5c0c0_.py  32061cd3a2a2_rename_users_table.py  424f18f4c1df_.py  4364a2938db0_.py  4456ad5faf86_.py  45282885249b_.py  462ac1b607e9_.py  4638d0c1f06f_.py  4f7e2f9ff54e_.py  50da86128cfc_.py  510aaa0d1541_.py  51b83c02eb37_.py  521aa70e0617_.py  533fc09a4d32_.py  577ad345788e_.py  66d8893fe442_.py  7793ca45b7f9_.py  8062d67a91e0_.py  923b0f523f3_.py  9294a022188d_.py  936971a9b55d_.py  b1d13b4b175a_.py  bb6381842dea_.py  c070976dc8fb_.py  f9d108978c5a_.py  fb87044ded54_.py
portal/: .babelrc  .eslintrc.js  __init__.py  app.py  application.cfg.default  application.cfg.travis  audit.py  babel.config.js  cache.py  celery_test_worker.py  celery_worker.py  config.py  csrf.py  database.py  date_tools.py  development_gulpfile.js  development_gulpfile.mjs  dict_tools.py  dogpile.py  dogpile_cache.py  env.py  extensions.py  forms.py  gulpfile.js  i18next_gulpfile.js  i18next_gulpfile.mjs  jest.config.js  logs.py  mail.py  package-lock.json  package.json  persistence.py  session.py  set_tools.py  site_persistence.py  sql_logging.py  system_uri.py  tasks.py  template_helpers.py  timeout_lock.py  (+8 more)
portal/config/: config.py  config_persistence.py  exclusion_persistence.py  model_persistence.py  site_persistence.py
portal/eproms/: views.py
portal/eproms_substudy_domains/: .babelrc  README.md  package-lock.json  package.json  webpack.config.js
portal/eproms_substudy_tailored_content/: .babelrc  README.md  jest.config.js  package-lock.json  package.json  webpack.config.js
portal/exercise_diet/: views.py
portal/factories/: app.py  celery.py  redis.py
portal/gil/: views.py
portal/locale/: portal.pot
portal/migrations/: env.py  script.py.mako
portal/models/: address.py  adherence_cache_timeline_validation.py  adherence_data.py  app_text.py  assessment_status.py  audit.py  auth.py  client.py  clinical_constants.py  codeable_concept.py  coding.py  communication.py  communication_request.py  coredata.py  encounter.py  extension.py  fhir.py  flaskdanceprovider.py  group.py  i18n.py  i18n_utils.py  identifier.py  intervention.py  intervention_strategies.py  lazy.py  locale.py  login.py  message.py  next_step.py  notification.py  observation.py  organization.py  overall_status.py  patient_list.py  performer.py  practitioner.py  procedure.py  procedure_codes.py  qb_status.py  qb_timeline.py  (+23 more)
portal/templates/: 404.html  500.html  about.html  access.html  admin.html  admin_base.html  challenge_identity.html  client_add.html  client_edit.html  clients_list.html  communications.html  confirm_identity.html  contact.html  contact_sent.html  coredata.html  empro_site_overdue_table.html  eproms.css  error.html  explore.html  force_reload.html  index-remote-nav.html  index.html  initial_queries.html  initial_queries_macros.html  intervention_admin.html  invite.html  invite_sent.html  landing.html  layout.html  legal.html  longitudinalReport.html  org_tree.html  patient_profile.html  patient_profile_create.html  patients.py  patients_by_org.html  portal.html  portal_footer.html  portal_old.html  (+28 more)
templates/: home.html  index-remote-nav.html  index.html  portal.html  portal_wrapper.html  profile.html  register_client.html  termsofuse.html
tests/: __init__.py  assessment_example  bad_qnr.json  conftest.py  encounter-example.json  fixturised_tests_list.sh  fixturised_tests_list.txt  organization-example-f001-burgers.json  organization-example-f002-burgers-card.json  organization-example-gastro.json  pages.py  procedure-example.json  procedure2-example.json  test_2fa.py  test_access_on_verify.py  test_access_url.py  test_address.py  test_api.py  test_app_text.py  test_assessment_engine.py  test_assessment_status.py  test_audit.py  test_auth.py  test_celery.py  test_clinical.py  test_communication.py  test_consent.py  test_coredata.py  test_date_tools.py  test_demographics.py  test_deploy.sh  test_dict_tools.py  test_encounter.py  test_exclusion_persistence.py  test_fhir.py  test_group.py  test_healthcheck.py  test_i18n.py  test_identifier.py  test_integration.py  (+28 more)
tmp/: site_persistence_file.json
(+746 files in other folders)
