# pyup: ignore file
# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = portal
description = TrueNTH Shared Services
long_description = TrueNTH Shared Services RESTful API, to be used by TrueNTH intervention applications. This API attempts to conform with the HL7 FHIR specification as much as is reasonable.
url = https://github.com/uwcirg/truenth-portal
author = CIRG, University of Washington
author_email = truenth-dev@uw.edu
maintainer = CIRG, University of Washington
maintainer_email= truenth-dev@uw.edu
license = BSD 3-Clause License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps
platforms = any
version = attr: setuptools_scm.get_version

[options]
packages = find:
scripts =
    manage.py
    wsgi.py
    docker/remap_envvars.py
zip_safe = False
include_package_data = True
setup_requires =
    setuptools_scm==7.1.0

# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
    celery
    enum34
    flask
    flask-babel
    flask-dance
    flask-dogpile-cache
    flask-migrate
    flask-oauthlib
    flask-recaptcha
    flask-session
    flask-sqlalchemy
    flask-swagger
    flask-user
    future
    fuzzywuzzy
    gunicorn
    json-logging
    jsonschema
    oauthlib
    onetimepass
    polib
    psycopg2
    python-dateutil
    python-levenshtein
    python-statemachine
    redis
    requests-cache
    validators

[options.extras_require]
dev =
    coverage
    flask-testing
    flask-webtest
    page_objects
    pytest
    pytest-flask
    selenium
    sphinx
    sphinx_rtd_theme
    swagger_spec_validator
    tox
    xvfbwrapper

# Include generated static files in package data
# some may be installed *after* portal module installation (setup.py called);
# ie after this file is relevant
# keeping partially for posterity
[options.package_data]
portal =
    static/files/locales/*/translation.json
    static/maps/*.map
    static/js/dist/*.js
    static/css/*.css
    */static/css/*.css
    static/*

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # Ignore testing-specific warning
    ignore:^"localhost" is not a valid cookie domain, it must contain a.*:Warning

    # Ignore warnings on specific dependencies (already reported upstream)
    ignore::DeprecationWarning:dogpile
    ignore::DeprecationWarning:flask_user

    # error on bad assertions
    error:.*assertion is always true.*
