# pyup: ignore file
# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = portal
description = TrueNTH Shared Services
long_description = TrueNTH Shared Services RESTful API, to be used by TrueNTH intervention applications. This API attempts to conform with the HL7 FHIR specification as much as is reasonable.
url = https://github.com/uwcirg/truenth-portal
author = CIRG, University of Washington
author_email = truenth-dev@uw.edu
maintainer = CIRG, University of Washington
maintainer_email= truenth-dev@uw.edu
license = BSD 3-Clause License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps
platforms = any
version = attr: setuptools_scm.get_version

[options]
packages = find:
scripts =
    manage.py
    wsgi.py
    docker/remap_envvars.py
zip_safe = False
include_package_data = True
setup_requires =
    setuptools_scm==7.1.0

# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
    alembic==1.4.3
    celery==5.3.1
    click==8.1.7
    dogpile.cache==0.9.0
    flask-babel==1.0.0
    flask-caching==1.8.0
    flask-dance[sqla]==1.4.0
    flask-mail==0.9.1
    flask-migrate==2.5.3
    flask-oauthlib==0.9.6
    flask-recaptcha==0.4.2
    flask-session==0.3.2
    flask-sqlalchemy==2.4.1
    flask-sqlalchemy-caching==1.0.4
    flask-swagger==0.2.14
    flask-user @ git+https://github.com/uwcirg/Flask-User.git@0.6.21.2
    flask-wtf==0.14.3
    flask==1.0.3
    fuzzywuzzy==0.17.0
    healthcheck==1.3.3
    jsonschema==3.0.2
    json-logging==1.3.0
    oauthlib==2.1.0
    onetimepass==1.0.1
    polib==1.1.1
    python-levenshtein==0.12.1
    python-statemachine==0.8.0
    redis==3.5.3
    requests-cache==0.5.2
    requests-oauthlib==1.1.0
    sqlalchemy==1.3.24
    swagger-spec-validator==2.7.3
    validators==0.14.0

    babel==2.9.0
    bcrypt==3.2.0
    itsdangerous==1.1.0
    jinja2==2.11.3
    markupsafe==1.1.1
    werkzeug==1.0.1
    wtforms==2.2.1


[options.extras_require]
dev =
    beautifulsoup4==4.9.3
    coverage==5.4
    docutils==0.14
    flask-testing==0.8.1
    flask-webtest==0.0.9
    imagesize==1.1.0
    mock==4.0.3
    packaging>=22
    page_objects
    page-objects==1.1.0
    pluggy==0.13.1
    psycopg2-binary==2.8.6
    py==1.10.0
    pygments==2.7.4
    pyparsing==2.4.7
    pytest >= 6.1.0
    pytest-flask==0.15.1
    pytest-timeout==1.4.2
    selenium
    snowballstemmer==2.0.0
    sphinx==3.3.1
    sphinxcontrib-applehelp==1.0.4
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sphinxcontrib-websupport==1.1.2
    sphinx-rtd-theme==0.5.1
    swagger_spec_validator
    tox==3.23.0
    typing==3.7.4.3
    virtualenv==20.4.2
    waitress==1.4.3
    webob==1.8.5
    webtest==2.0.33
    xvfbwrapper

# Include generated static files in package data
# some may be installed *after* portal module installation (setup.py called);
# ie after this file is relevant
# keeping partially for posterity
[options.package_data]
portal =
    static/files/locales/*/translation.json
    static/maps/*.map
    static/js/dist/*.js
    static/css/*.css
    */static/css/*.css
    static/*

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # Ignore testing-specific warning
    ignore:^"localhost" is not a valid cookie domain, it must contain a.*:Warning

    # Ignore warnings on specific dependencies (already reported upstream)
    ignore::DeprecationWarning:dogpile
    ignore::DeprecationWarning:flask_user

    # error on bad assertions
    error:.*assertion is always true.*
